--- a/JSAJAX/index.html
+++ b/JSAJAX/index.html
@@ -19,11 +19,44 @@
         xhr.send();
       
         // console.log(xhr.readyState,xhr.status)
-        xhr.onreadystatechange = function(){
+        var p = new Promise((resolve,reject)=>{
+            xhr.onreadystatechange = function(){
             if(xhr.readyState == 4 && xhr.status == 200){
                 console.log(xhr.responseText);
+                resolve(xhr.responseText)
             } 
         }
+        })
+        
+        function xq(){
+            return new Promise((resolve,reject)=>{
+            setTimeout(() => {
+                console.log('猛哥要相亲了！');
+                resolve('相亲很顺利！')
+            }, 1000); 
+        })
+        }
+        // xq()
+        function marry(){
+            return new Promise((resolve,reject)=>{
+            setTimeout(() => {
+            console.log('猛哥结婚了！');
+            console.log('开心');
+        }, 500);
+        })
+        }
+        // p
+        //     .then(xq)
+        //     .then(marry)
+        //     .catch(()=>{
+        //         console.log("猛哥出家了！")
+        //     })
+        Promise.race([p,xq(),marry()]).then((value)=>{
+            console.log(value)
+        }).catch((err)=>{               /*all方法里面的函数没有执行顺序*/
+            console.log(err)
+        })  
+
     </script>
 </body>
 </html>
